--- a/details.html
+++ b/details.html
@@ -66,7 +66,8 @@
     </header>
 
     <main>
-      <div class="breadcrumb__main">
+      <!-- ========== BREADCRUMB ========== -->
+      <section class="breadcrumb__main">
         <div class="breadcrumb__wrapper container flex items-center">
           <nav class="breadcrumb">
             <a href="" class="breadcrumb--items">Home</a>
@@ -81,8 +82,250 @@
           <div class="breadcrumb__line"></div>
           <a href="" class="breadcrumb__prd">Asgaard sofa</a>
         </div>
-      </div>
-      
+      </section>
+      <!-- ========== PRODUCT DETAILS ========== -->
+      <section class="prdPage__detail container">
+        <div class="prdPage__left">
+          <div class="prdPage__listImg">
+            <div class="imgItems"><img src="./assets/images/Outdoor sofa set 2.png" alt=""></div>
+            <div class="imgItems"><img src="./assets/images/Outdoor sofa set 2.png" alt=""></div>
+            <div class="imgItems"><img src="./assets/images/Outdoor sofa set 2.png" alt=""></div>
+            <div class="imgItems"><img src="./assets/images/Outdoor sofa set 2.png" alt=""></div>
+          </div>
+          <div class="prdPage__mainImg">
+            <img src="./assets/images/Asgaard sofa 3.png" alt="">
+          </div>
+        </div>
+
+        <div class="prdPage__right">
+          <h4 class="prdPage__name">Asgaard sofa</h4>
+          <span class="prdPage__price">25.000.000đ</span>
+          <div class="prdPage__rate flex items-center">
+            <div class="star">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path d="M10 1L13 7L19 7.75L14.88 12.37L16 19L10 16L4 19L5.13 12.37L1 7.75L7 7L10 1Z" fill="#FFC700"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path d="M10 1L13 7L19 7.75L14.88 12.37L16 19L10 16L4 19L5.13 12.37L1 7.75L7 7L10 1Z" fill="#FFC700"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path d="M10 1L13 7L19 7.75L14.88 12.37L16 19L10 16L4 19L5.13 12.37L1 7.75L7 7L10 1Z" fill="#FFC700"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path d="M10 1L13 7L19 7.75L14.88 12.37L16 19L10 16L4 19L5.13 12.37L1 7.75L7 7L10 1Z" fill="#FFC700"/>
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path d="M10 1L13 7L19 7.75L14.88 12.37L16 19L10 16L4 19L5.13 12.37L1 7.75L7 7L10 1Z" fill="#FFC700"/>
+              </svg>
+            </div>
+            <p>|</p>
+            <div class="custReview">
+              <p>5 Customer Review</p>
+            </div>
+          </div>
+          <div class="prdPage__desc">
+            Setting the bar as one of the loudest speakers in its class, the Kilburn is a compact, stout-hearted hero with a well-balanced audio which boasts a clear midrange and extended highs for a sound.
+          </div>
+          <div class="prdPage__size">
+            <p>size</p>
+            <ul class="flex items-center">
+              <li class="flex items-center justify-center">L</li>
+              <li class="flex items-center justify-center">XL</li>
+              <li class="flex items-center justify-center">XS</li>
+            </ul>
+          </div>
+          <div class="prdPage__color">
+            <p>Color</p>
+            <ul class="flex items-center">
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="prdPage__btn">
+            <form action="">
+              <span>-</span>
+              <input type="text" name="" id="" value="1">
+              <span>+</span>
+            </form>
+            <button>Add To Cart</button>
+            <button>+ Compare</button>
+          </div>
+        </div>
+      </section>
+
+
+
+
+      <section class="related container">
+        <h3>Related Products</h3>
+        <div class="product__wrapper">
+          <!-- ====== PRODUCT ITEMS ====== -->
+          <div class="product__items">
+            <div class="product__img__wrapper">
+              <img src="./assets/images/image 1.png" alt="img-product" class="product__img">
+              <div class="prd__sale flex items-center justify-center txt-16-500">-30%</div>
+            </div>
+            <div class="product__infor">
+              <h4 class="prd--name txt-24-600">Syltherine</h4>
+              <p class="prd--desc txt-16-500">Stylish cafe chair</p>
+              <div class="prd__price flex items-center">
+                <span class="newPrice">2.500.000đ</span>
+                <span class="oldPrice">3.500.000đ</span>
+              </div>
+            </div>
+            <div class="product__hover">
+              <div class="product__hover__content">
+                <button class="prd__btn txt-16-600-150">Add to cart</button>
+                <a href="#" class="prd__btn txt-16-600-150">View product</a>
+                <ul class="prd__option flex items-center">
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M12 10.6666C11.4747 10.6666 11 10.8733 10.644 11.2046L5.94 8.46665C5.97333 8.31331 6 8.15998 6 7.99998C6 7.83998 5.97333 7.68665 5.94 7.53331L10.64 4.79331C11 5.12665 11.4733 5.33331 12 5.33331C13.1067 5.33331 14 4.43998 14 3.33331C14 2.22665 13.1067 1.33331 12 1.33331C10.8933 1.33331 10 2.22665 10 3.33331C10 3.49331 10.0267 3.64665 10.06 3.79998L5.36 6.53998C5 6.20665 4.52667 5.99998 4 5.99998C2.89333 5.99998 2 6.89331 2 7.99998C2 9.10665 2.89333 9.99998 4 9.99998C4.52667 9.99998 5 9.79331 5.36 9.45998L10.0587 12.2053C10.0211 12.3563 10.0014 12.5111 10 12.6666C10 13.0622 10.1173 13.4489 10.3371 13.7778C10.5568 14.1067 10.8692 14.363 11.2346 14.5144C11.6001 14.6658 12.0022 14.7054 12.3902 14.6282C12.7781 14.551 13.1345 14.3606 13.4142 14.0809C13.6939 13.8012 13.8844 13.4448 13.9616 13.0568C14.0387 12.6689 13.9991 12.2667 13.8478 11.9013C13.6964 11.5358 13.44 11.2235 13.1111 11.0037C12.7822 10.7839 12.3956 10.6666 12 10.6666Z" fill="white"/>
+                    </svg>
+                    <p class="txt-16-600-150">Share</p>
+                  </li>
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M10.0799 7L11.0799 8L14.5199 4.55L10.9999 1L9.99992 2L11.7999 3.8H1.99992V5.2H11.8199L10.0799 7ZM5.85992 9L4.85992 8L1.41992 11.5L4.90992 15L5.90992 14L4.09992 12.2H13.9999V10.8H4.09992L5.85992 9Z" fill="white"/>
+                    </svg>
+                    <p class="txt-16-600-150">Compare</p>
+                  </li>
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M7.99973 14.0361C-5.33333 6.66669 3.99999 -1.33331 7.99973 3.72539C12 -1.33331 21.3333 6.66669 7.99973 14.0361Z" stroke="white" stroke-width="1.8"/>
+                    </svg>
+                    <p class="txt-16-600-150">Like</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- ====== PRODUCT ITEMS ====== -->
+          <div class="product__items">
+            <div class="product__img__wrapper">
+              <img src="./assets/images/image 1.png" alt="img-product" class="product__img">
+              <div class="prd__sale flex items-center justify-center txt-16-500">-30%</div>
+            </div>
+            <div class="product__infor">
+              <h4 class="prd--name txt-24-600">Syltherine</h4>
+              <p class="prd--desc txt-16-500">Stylish cafe chair</p>
+              <div class="prd__price flex items-center">
+                <span class="newPrice">2.500.000đ</span>
+                <span class="oldPrice">3.500.000đ</span>
+              </div>
+            </div>
+            <div class="product__hover">
+              <div class="product__hover__content">
+                <button class="prd__btn txt-16-600-150">Add to cart</button>
+                <a href="#" class="prd__btn txt-16-600-150">View product</a>
+                <ul class="prd__option flex items-center">
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M12 10.6666C11.4747 10.6666 11 10.8733 10.644 11.2046L5.94 8.46665C5.97333 8.31331 6 8.15998 6 7.99998C6 7.83998 5.97333 7.68665 5.94 7.53331L10.64 4.79331C11 5.12665 11.4733 5.33331 12 5.33331C13.1067 5.33331 14 4.43998 14 3.33331C14 2.22665 13.1067 1.33331 12 1.33331C10.8933 1.33331 10 2.22665 10 3.33331C10 3.49331 10.0267 3.64665 10.06 3.79998L5.36 6.53998C5 6.20665 4.52667 5.99998 4 5.99998C2.89333 5.99998 2 6.89331 2 7.99998C2 9.10665 2.89333 9.99998 4 9.99998C4.52667 9.99998 5 9.79331 5.36 9.45998L10.0587 12.2053C10.0211 12.3563 10.0014 12.5111 10 12.6666C10 13.0622 10.1173 13.4489 10.3371 13.7778C10.5568 14.1067 10.8692 14.363 11.2346 14.5144C11.6001 14.6658 12.0022 14.7054 12.3902 14.6282C12.7781 14.551 13.1345 14.3606 13.4142 14.0809C13.6939 13.8012 13.8844 13.4448 13.9616 13.0568C14.0387 12.6689 13.9991 12.2667 13.8478 11.9013C13.6964 11.5358 13.44 11.2235 13.1111 11.0037C12.7822 10.7839 12.3956 10.6666 12 10.6666Z" fill="white"/>
+                    </svg>
+                    <p class="txt-16-600-150">Share</p>
+                  </li>
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M10.0799 7L11.0799 8L14.5199 4.55L10.9999 1L9.99992 2L11.7999 3.8H1.99992V5.2H11.8199L10.0799 7ZM5.85992 9L4.85992 8L1.41992 11.5L4.90992 15L5.90992 14L4.09992 12.2H13.9999V10.8H4.09992L5.85992 9Z" fill="white"/>
+                    </svg>
+                    <p class="txt-16-600-150">Compare</p>
+                  </li>
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M7.99973 14.0361C-5.33333 6.66669 3.99999 -1.33331 7.99973 3.72539C12 -1.33331 21.3333 6.66669 7.99973 14.0361Z" stroke="white" stroke-width="1.8"/>
+                    </svg>
+                    <p class="txt-16-600-150">Like</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- ====== PRODUCT ITEMS ====== -->
+          <div class="product__items">
+            <div class="product__img__wrapper">
+              <img src="./assets/images/image 1.png" alt="img-product" class="product__img">
+              <div class="prd__sale flex items-center justify-center txt-16-500">-30%</div>
+            </div>
+            <div class="product__infor">
+              <h4 class="prd--name txt-24-600">Syltherine</h4>
+              <p class="prd--desc txt-16-500">Stylish cafe chair</p>
+              <div class="prd__price flex items-center">
+                <span class="newPrice">2.500.000đ</span>
+                <span class="oldPrice">3.500.000đ</span>
+              </div>
+            </div>
+            <div class="product__hover">
+              <div class="product__hover__content">
+                <button class="prd__btn txt-16-600-150">Add to cart</button>
+                <a href="#" class="prd__btn txt-16-600-150">View product</a>
+                <ul class="prd__option flex items-center">
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M12 10.6666C11.4747 10.6666 11 10.8733 10.644 11.2046L5.94 8.46665C5.97333 8.31331 6 8.15998 6 7.99998C6 7.83998 5.97333 7.68665 5.94 7.53331L10.64 4.79331C11 5.12665 11.4733 5.33331 12 5.33331C13.1067 5.33331 14 4.43998 14 3.33331C14 2.22665 13.1067 1.33331 12 1.33331C10.8933 1.33331 10 2.22665 10 3.33331C10 3.49331 10.0267 3.64665 10.06 3.79998L5.36 6.53998C5 6.20665 4.52667 5.99998 4 5.99998C2.89333 5.99998 2 6.89331 2 7.99998C2 9.10665 2.89333 9.99998 4 9.99998C4.52667 9.99998 5 9.79331 5.36 9.45998L10.0587 12.2053C10.0211 12.3563 10.0014 12.5111 10 12.6666C10 13.0622 10.1173 13.4489 10.3371 13.7778C10.5568 14.1067 10.8692 14.363 11.2346 14.5144C11.6001 14.6658 12.0022 14.7054 12.3902 14.6282C12.7781 14.551 13.1345 14.3606 13.4142 14.0809C13.6939 13.8012 13.8844 13.4448 13.9616 13.0568C14.0387 12.6689 13.9991 12.2667 13.8478 11.9013C13.6964 11.5358 13.44 11.2235 13.1111 11.0037C12.7822 10.7839 12.3956 10.6666 12 10.6666Z" fill="white"/>
+                    </svg>
+                    <p class="txt-16-600-150">Share</p>
+                  </li>
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M10.0799 7L11.0799 8L14.5199 4.55L10.9999 1L9.99992 2L11.7999 3.8H1.99992V5.2H11.8199L10.0799 7ZM5.85992 9L4.85992 8L1.41992 11.5L4.90992 15L5.90992 14L4.09992 12.2H13.9999V10.8H4.09992L5.85992 9Z" fill="white"/>
+                    </svg>
+                    <p class="txt-16-600-150">Compare</p>
+                  </li>
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M7.99973 14.0361C-5.33333 6.66669 3.99999 -1.33331 7.99973 3.72539C12 -1.33331 21.3333 6.66669 7.99973 14.0361Z" stroke="white" stroke-width="1.8"/>
+                    </svg>
+                    <p class="txt-16-600-150">Like</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- ====== PRODUCT ITEMS ====== -->
+          <div class="product__items">
+            <div class="product__img__wrapper">
+              <img src="./assets/images/image 1.png" alt="img-product" class="product__img">
+              <div class="prd__sale flex items-center justify-center txt-16-500">-30%</div>
+            </div>
+            <div class="product__infor">
+              <h4 class="prd--name txt-24-600">Syltherine</h4>
+              <p class="prd--desc txt-16-500">Stylish cafe chair</p>
+              <div class="prd__price flex items-center">
+                <span class="newPrice">2.500.000đ</span>
+                <span class="oldPrice">3.500.000đ</span>
+              </div>
+            </div>
+            <div class="product__hover">
+              <div class="product__hover__content">
+                <button class="prd__btn txt-16-600-150">Add to cart</button>
+                <a href="#" class="prd__btn txt-16-600-150">View product</a>
+                <ul class="prd__option flex items-center">
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M12 10.6666C11.4747 10.6666 11 10.8733 10.644 11.2046L5.94 8.46665C5.97333 8.31331 6 8.15998 6 7.99998C6 7.83998 5.97333 7.68665 5.94 7.53331L10.64 4.79331C11 5.12665 11.4733 5.33331 12 5.33331C13.1067 5.33331 14 4.43998 14 3.33331C14 2.22665 13.1067 1.33331 12 1.33331C10.8933 1.33331 10 2.22665 10 3.33331C10 3.49331 10.0267 3.64665 10.06 3.79998L5.36 6.53998C5 6.20665 4.52667 5.99998 4 5.99998C2.89333 5.99998 2 6.89331 2 7.99998C2 9.10665 2.89333 9.99998 4 9.99998C4.52667 9.99998 5 9.79331 5.36 9.45998L10.0587 12.2053C10.0211 12.3563 10.0014 12.5111 10 12.6666C10 13.0622 10.1173 13.4489 10.3371 13.7778C10.5568 14.1067 10.8692 14.363 11.2346 14.5144C11.6001 14.6658 12.0022 14.7054 12.3902 14.6282C12.7781 14.551 13.1345 14.3606 13.4142 14.0809C13.6939 13.8012 13.8844 13.4448 13.9616 13.0568C14.0387 12.6689 13.9991 12.2667 13.8478 11.9013C13.6964 11.5358 13.44 11.2235 13.1111 11.0037C12.7822 10.7839 12.3956 10.6666 12 10.6666Z" fill="white"/>
+                    </svg>
+                    <p class="txt-16-600-150">Share</p>
+                  </li>
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M10.0799 7L11.0799 8L14.5199 4.55L10.9999 1L9.99992 2L11.7999 3.8H1.99992V5.2H11.8199L10.0799 7ZM5.85992 9L4.85992 8L1.41992 11.5L4.90992 15L5.90992 14L4.09992 12.2H13.9999V10.8H4.09992L5.85992 9Z" fill="white"/>
+                    </svg>
+                    <p class="txt-16-600-150">Compare</p>
+                  </li>
+                  <li class="prd__option--items flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                      <path d="M7.99973 14.0361C-5.33333 6.66669 3.99999 -1.33331 7.99973 3.72539C12 -1.33331 21.3333 6.66669 7.99973 14.0361Z" stroke="white" stroke-width="1.8"/>
+                    </svg>
+                    <p class="txt-16-600-150">Like</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
