--- a/checkout.html
+++ b/checkout.html
@@ -114,7 +114,7 @@
           </div>
         </section>
       </header>
-
+      nfnvkd
       <main>
         <!-- ========== BANNER WRAPPER ========== -->
         <section class="banner__wrapper">
